--- a/Eksamen/Views/Home/Index.cshtml
+++ b/Eksamen/Views/Home/Index.cshtml
@@ -2,7 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Webshop</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<style>
+    .Motorcyclebg {
+        /* Margin bottom by footer height */
+
+        margin-bottom: 60px;
+        background-image:url("/images/background/Background_image.jpg");
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        min-height: 500px;
+        position: relative;
+        z-index: 1;
+      
+    }
+
+    .Motorcyclebg::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.40);
+        z-index: -1;
+    }
+
+
+
+</style>
+
+<div class="Motorcyclebg d-flex align-items-center justify-content-center">
+    <div class="text-center">
+        <h1 class="display-4" style="color:white">Velkommen til Motorcykel Grej</h1>
+    </div>
+</div>
+<div class="container">
+    <h2>Mest solgte produkter:</h2>
 </div>
