buggy sql statement

--- a/Eksamen/Views/Shop/Shop.cshtml
+++ b/Eksamen/Views/Shop/Shop.cshtml
@@ -15,7 +15,7 @@
             {
                 <div class="col-md-4">
                     <div class="bg-primary p-5">
-                        billede her
+                        <img src="@product.Image" alt="Picutre" />
                     </div>
                     <div>
                         <span>
