--- a/Eksamen/Views/Home/Index.cshtml
+++ b/Eksamen/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<style>
+    <style>
     .Motorcyclebg {
         /* Margin bottom by footer height */
 
@@ -14,8 +14,9 @@
         min-height: 500px;
         position: relative;
         z-index: 1;
-      
+
     }
+    @* z-index = stack order of the element, ::before is insert some text before the content ie picture *@
 
     .Motorcyclebg::before {
         content: "";
@@ -28,9 +29,16 @@
         z-index: -1;
     }
 
+    .carousel {
+        max-width: 500px;
+        margin: 0 auto;
+    }
 
 
-</style>
+
+
+
+    </style>
 
 <div class="Motorcyclebg d-flex align-items-center justify-content-center">
     <div class="text-center">
@@ -39,4 +47,30 @@
 </div>
 <div class="container">
     <h2>Mest solgte produkter:</h2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/images/products/boots/MC-Sko XPD X-Zero R, Hvid 1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/images/products/gloves/Handsker Course Alpha, Hvid 1.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/images/products/helmets/AGV X3000 1.jpg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
