--- a/Eksamen/Views/Shop/Shop.cshtml
+++ b/Eksamen/Views/Shop/Shop.cshtml
@@ -4,31 +4,51 @@
     ViewData["Title"] = "Products";
 }
 
+<style>
+    #products img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+
+    span {
+        font-weight: bold;
+    }
+
+</style>
+
 
 
     <div class="container">
         <h1>@ViewData["Title"]</h1>
 
         <p>Overblik over produkter</p>
-        <div class="row">
+        <div class="row" id="products">
             @foreach (var product in Model)
             {
-                <div class="col-md-4">
-                    <div class="bg-primary p-5">
-                        <img src="@product.Image" alt="Picutre" />
-                    </div>
-                    <div>
-                        <span>
-                            @product.Name
-                        </span>
-                    </div>
-                    <div>
-                        <span>
-                            Pris: @product.Price
-                        </span>
-                    </div>
-
+            <div class="col-md-4 mb-4">
+                <div>
+                    <img src="@product.Image" alt="Productpicture" />
                 </div>
+                <div>
+                    <span>
+                        @product.Name
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        Pris: @product.Price kr.
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        Kategori: @product.Category
+                    </span>
+                </div>
+                <div class="text-center">
+                    <a href="/Shop/Shop/@product.Id"><button id="addToBasket" class="btn btn-sm btn-primary"> Tilføj til kurv </button></a>
+                </div>
+            </div>
             }
         </div>
 
