--- a/Eksamen/Views/Shared/_Layout.cshtml
+++ b/Eksamen/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hjem</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Shop">Webshop</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Shop">Produkter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
