added a dummy basket.

--- a/Eksamen/Views/Home/Privacy.cshtml
+++ b/Eksamen/Views/Home/Privacy.cshtml
@@ -3,4 +3,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Lorem ipsum dolor sit amet, eum dolorem omittam cotidieque ea, brute prompta his ex, eros fastidii apeirian cu duo. Mel aeterno aliquam electram ne. Ut his meliore definitionem, at eam meliore epicuri. Reque labore maiestatis mel cu, ut vis doctus scripta. Liber officiis ut cum.
+
+    Pro nominati adversarium no, te ullum zril utroque pri, id sea libris blandit propriae. Ea vix quod alia consetetur, ne mei probatus eleifend efficiantur, quo ne esse rebum. Nostrum praesent maiestatis eos at, noster oporteat qui in. Et eos mazim numquam probatus, sed an putant adipisci, ei mea purto alienum accusata.
+
+    Ei eros atomorum theophrastus nam, ex accumsan adolescens definitiones sit. Quo an utinam gubergren maiestatis. Eu vim nihil animal rationibus, sumo eligendi verterem at mei. Et vim quem aliquam utroque, ex usu ferri omnes. Eum dicat aperiri senserit at. At rebum latine quaestio cum, eu summo nihil ius. Error placerat reprimique qui ei.
+
+    Regione pericula an sea. Cu has assum percipit, mel te debet reprimique percipitur. Labitur legimus vulputate cu vim, id facilis signiferumque vis. Pri id ferri dicant possim, ei nullam perpetua incorrupte his. Cu deseruisse incorrupte ullamcorper ius. Adipisci convenire principes pri ea, ei nonumy legere per, cu verear dissentias sit.
+
+    Per ut adipisci adolescens comprehensam, alienum tractatos in sea. Cu utroque molestie scripserit pri, nominavi legendos mei id, sea an vero voluptua. Vim omnis sadipscing an, reprimique efficiantur mel id. Eam habemus reformidans mediocritatem ei, eam cu assum neglegentur. Eu dicam facete dictas nam. Eos natum graecis imperdiet eu. No dicat graeco vim, ei facilisis repudiare liberavisse cum, nec ex nulla consequat.
+</p>
