--- a/Eksamen/Views/Shared/_Layout.cshtml
+++ b/Eksamen/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Product">Min kurv <img src="~/images/icons/basket.jpg" style="width:25px; height:auto; border-radius:5px; margin-top:5px;"><img /></a>
+                        </li>
                     </ul>
                 </div>
             </div>
