changed class name Product.cs -> ShoppingCart.cs

--- a/Eksamen/Views/Home/Privacy.cshtml
+++ b/Eksamen/Views/Home/Privacy.cshtml
@@ -3,7 +3,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>
+<p style="width:500px;">
     Lorem ipsum dolor sit amet, eum dolorem omittam cotidieque ea, brute prompta his ex, eros fastidii apeirian cu duo. Mel aeterno aliquam electram ne. Ut his meliore definitionem, at eam meliore epicuri. Reque labore maiestatis mel cu, ut vis doctus scripta. Liber officiis ut cum.
 
     Pro nominati adversarium no, te ullum zril utroque pri, id sea libris blandit propriae. Ea vix quod alia consetetur, ne mei probatus eleifend efficiantur, quo ne esse rebum. Nostrum praesent maiestatis eos at, noster oporteat qui in. Et eos mazim numquam probatus, sed an putant adipisci, ei mea purto alienum accusata.
