added alert to buttons in product

--- a/Eksamen/Views/Shop/Shop.cshtml
+++ b/Eksamen/Views/Shop/Shop.cshtml
@@ -46,12 +46,11 @@
                     </span>
                 </div>
                 <div class="text-center">
-                    <a href="/Shop/Shop/@product.Id"><button id="addToBasket" class="btn btn-sm btn-primary"> Tilføj til kurv </button></a>
+                    <a href="/Shop/Shop/@product.Id"><button id="addToBasket" class="btn btn-sm btn-primary" onclick="alert('Varen er tilføjet til kurven')"> Tilføj til kurv </button></a>
                 </div>
             </div>
             }
         </div>
 
     </div>
-
 
