delete message added

--- a/Eksamen/Views/Admin/Select.cshtml
+++ b/Eksamen/Views/Admin/Select.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<Eksamen.Models.Product>
 
+
+    <div class="alert alert-primary" role="alert">
+        @ViewBag.AlertMsg
+    </div>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
