--- a/Eksamen/Views/Shop/Shop.cshtml
+++ b/Eksamen/Views/Shop/Shop.cshtml
@@ -51,6 +51,7 @@
             </div>
             }
     </div>
+    </div>
     <script>
         function addProduct(id, antal) {
             var xhttp = new XMLHttpRequest();
