changed color on alert message

--- a/Eksamen/Views/Admin/Select.cshtml
+++ b/Eksamen/Views/Admin/Select.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Eksamen.Models.Product>
 
 
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-danger" role="alert">
         @ViewBag.AlertMsg
     </div>
 
